# sonobus

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  FluxAoO.jucer  LICENSE  LICENSE_EXCEPTION  README.md  SonoBus.jucer  SonoBusIOS.jucer  buildcmake.sh  linuxinstall.sh  setupcmake.sh  setupcmakewin.sh  setupcmakewin32.sh  setupcmakexcode.sh
Builds/Android/: builddebug.sh  buildrelease.sh  copyrelease.sh  installrelease.sh  local.properties  settings.gradle
Builds/Android/app/: CMakeLists.txt  build.gradle
Builds/LinuxMakefile/: .gitignore  BUILDING.md  Makefile  build.sh  fedora_get_prereqs.sh  install.sh  mint_get_prereqs.sh  mkdeb.sh  sonobus.desktop  ubuntu_get_prereqs.sh  uninstall.sh
Builds/LinuxMakefile/deb/DEBIAN/: control
Builds/LinuxMakefile/make_helpers/: arch_detection.cpp
Builds/MacOSX/: Icon.icns  Info-AAX.plist  Info-AU.plist  Info-AUv3_AppExtension.plist  Info-Standalone_Plugin.plist  Info-VST.plist  Info-VST3.plist
Builds/MacOSX/SonoBus.xcodeproj/: project.pbxproj
Builds/VisualStudio2017/: SonoBus.sln  SonoBus_AAX.vcxproj  SonoBus_AAX.vcxproj.filters  SonoBus_SharedCode.vcxproj  SonoBus_SharedCode.vcxproj.filters  SonoBus_StandalonePlugin.vcxproj  SonoBus_StandalonePlugin.vcxproj.filters  SonoBus_VST.vcxproj  SonoBus_VST.vcxproj.filters  SonoBus_VST3.vcxproj  SonoBus_VST3.vcxproj.filters  resources.rc
Builds/iOS/: Icon.icns  Info-AUv3_AppExtension.plist  Info-Standalone_Plugin.plist
Builds/iOS/SonoBus.xcodeproj/: project.pbxproj
JUCE/: .gitattributes  .gitrepo
JUCE/modules/juce_audio_basics/sources/: juce_MemoryAudioSource.cpp
JUCE/modules/juce_audio_devices/: juce_audio_devices.cpp
JUCE/modules/juce_audio_devices/audio_io/: juce_AudioDeviceManager.cpp
JUCE/modules/juce_audio_formats/format/: juce_AudioFormatWriter.cpp
JUCE/modules/juce_audio_plugin_client/AU/: juce_AUv3_Wrapper.mm
JUCE/modules/juce_audio_processors/processors/: juce_AudioProcessor.cpp
JUCE/modules/juce_audio_utils/players/: juce_SoundPlayer.cpp
JUCE/modules/juce_core/network/: juce_IPAddress.cpp  juce_Socket.cpp  juce_Socket.h
JUCE/modules/juce_core/threads/: juce_Thread.cpp
JUCE/modules/juce_core/xml/: juce_XmlElement.cpp
JUCE/modules/juce_gui_basics/: juce_gui_basics.h
JUCE/modules/juce_gui_basics/buttons/: juce_Button.cpp  juce_DrawableButton.cpp
JUCE/modules/juce_gui_basics/layout/: juce_TabbedButtonBar.cpp  juce_TabbedButtonBar.h  juce_TabbedComponent.h
JUCE/modules/juce_gui_basics/lookandfeel/: juce_LookAndFeel_V2.cpp  juce_LookAndFeel_V2.h  (+1 more)
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: AutoUpdater.cpp  AutoUpdater.h  BeatToggleGrid.cpp  BeatToggleGrid.h  ChannelGroup.cpp  ChannelGroup.h  ChannelGroupsView.cpp  ChannelGroupsView.h  ChatView.cpp  ChatView.h  CompressorView.h  ConnectView.cpp  ConnectView.h  CrossPlatformUtils.h  CrossPlatformUtilsAndroid.cpp  CrossPlatformUtilsIOS.mm  CrossPlatformUtilsLinux.cpp  CrossPlatformUtilsMac.mm  CrossPlatformUtilsWindows.cpp  DebugLogC.h  EffectParams.cpp  EffectParams.h  EffectsBaseView.h  ExpanderView.h  FluxPluginEditor.cpp  FluxPluginEditor.h  FluxPluginProcessor.cpp  FluxPluginProcessor.h  GenericItemChooser.cpp  GenericItemChooser.h  Grammar.cpp  Grammar.h  JitterBufferMeter.cpp  JitterBufferMeter.h  LatencyMatchView.cpp  LatencyMatchView.h  LatencyMeasurer.cpp  LatencyMeasurer.h  LevelMeterLookAndFeelMethods.h  LocalLatencyMeasurer.h  (+71 more)
Source/android/: SonoBusActivity.cpp  SonoBusActivity.h
doc/: README_MAC.txt  README_WINDOWS.txt  SonoBus User Guide.md
images/: LaunchScreen.storyboard  SonobusLogo.xcf  dice-icon.xcf
ios/: SonoBusIOS.jucer
ios/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
linux/: BUILDING.md  build.sh  deb_get_prereqs.sh  fedora_get_prereqs.sh  install.sh  sonobus.desktop  uninstall.sh
localization/: localized_de.strings  localized_de.txt  localized_es.strings  localized_es.txt  localized_fr.strings  localized_fr.txt  localized_it.strings  localized_it.txt  localized_ja.txt  localized_ko.txt  localized_nl.txt  localized_pt-br.txt  localized_pt-pt.txt  localized_pt.txt  localized_ru.txt  localized_zh-CN.txt  localized_zh-hans.txt
localization/tsv/: tsvtostrings.py
mobile/: SonoBusMobile.jucer
mobile/Builds/Android/: builddebug.sh  buildrelease.sh  copyrelease.sh  fixup.sh  installdebug.sh
mobile/Builds/iOS/: Info-AUv3_AppExtension.plist  Info-Standalone_Plugin.plist
mobile/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  BinaryData2.cpp  JuceHeader.h  JucePluginDefines.h  include_ff_meters.cpp  include_juce_audio_plugin_client_AAX_utils.cpp  include_juce_audio_plugin_client_ARA.cpp  include_juce_audio_plugin_client_LV2.cpp  include_juce_audio_plugin_client_LV2.mm  include_juce_audio_plugin_client_VST2.mm  include_juce_audio_plugin_client_VST3.mm
release/: SonoBusPkg.plist  buildmac.sh  buildwin.sh  codesign.sh  dist.sh  distmac.sh  distwin.sh  makedmg.sh  makepkgdmg.sh  notarize-app.sh  notarizedmg.sh  pushrelease.sh  update_package_version.py  wininstaller.iss
release/SonoBusLayout/: Info.plist  Preview2.icns
release/SonoBusLayout/Icons/: LayoutItem.0F3579EF-C06B-4563-90DB-5A7DF7BAC32B.icns  LayoutItem.22420AE3-0B22-4380-802C-2579AEDA756C.icns  LayoutItem.25D3A305-E6AE-4000-9CE4-D616D0DF22A7.icns  LayoutItem.E4E0AF01-0BD8-44B7-8E8D-848354E130E6.icns  LayoutItem.E7A4BEB2-AC0A-4490-92C8-1E47B256C0F6.icns  LayoutItem.FD8ED432-C7D4-4775-96BA-4BC525133960.icns
release/SonoBusPkgLayout/: Info.plist  Preview2.icns
release/SonoBusPkgLayout/Icons/: LayoutItem.5B60441E-1C58-4F89-9871-D86D80BEF2C1.icns  LayoutItem.CD1DEE20-0797-4524-BEE2-EFFF2A4C56EA.icns
release/macpkg/: SonoBus.pkgproj  gpl-3.0.txt  intro.txt
scripts/: SonoBus-mac-sandbox.entitlements  arch.cpp  compressjlc.dsp  compressor.dsp  compressor2.dsp  expander.dsp  expander2.dsp  limiter.dsp  mac_prebuild.sh  makecomp.sh  makeeq.sh  makezita.sh  parametric_eq.dsp  prependheader.sh  sonobus.desktop
snap/: snapcraft.yaml
snap/gui/: sonobus.desktop
(+25 files in other folders)
